# react-fastapi-template

./: Dockerfile  Justfile  README.md  components.json  index.html  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.app.json  tsconfig.json  unit.json  vite.config.ts
api/: __init__.py  server.py
gui/: App.tsx  index.css
