[project]
name = "react-fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Anibal Angulo", email = "ajcardoza2000@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
]

[dependency-groups]
dev = [
    "uvicorn>=0.34.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
